# things3-mcp

./: CLAUDE.md  README.md  pyproject.toml
docs/: API.md  DEVELOPMENT.md
src/mcp_things3/: __init__.py
src/mcp_things3/handlers/: __init__.py  xcallback.py
src/mcp_things3/scripts/: get_areas.applescript  get_projects.applescript  get_selected.applescript
src/mcp_things3/tools/: create.py  manage.py  view.py
src/things3_mcp/: server.py
src/things3_mcp/handlers/: applescript.py  xcallback.py
src/things3_mcp/scripts/: complete_selected.applescript  get_anytime.applescript  get_areas.applescript  get_inbox.applescript  get_projects.applescript  get_selected.applescript  get_someday.applescript  get_today.applescript  utils.applescript
src/things3_mcp/tools/: __init__.py  manage.py  view.py
tests/: __init__.py  test_handlers.py  test_server.py  test_tools.py
